welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i<-1 to 7) {
          ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (baggle==0) {
  ^